fixed off-centre location input box

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -109,7 +109,7 @@ img {
   left: 50vw;
   width: 45vw;
   height: 5vh;
-  margin-left: -25vw;
+  margin-left: -22.5vw;
   font-size: 2vw;
   font-family: 'Raleway', sans-serif;
 }
